--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="Urgent">#ffcccc</color>
+    <color name="High">#ffe6cc</color>
+    <color name="Normal">#ffffcc</color>
+    <color name="Low">#ccffcc</color>
 </resources>
