--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -18,7 +18,7 @@
         android:id="@+id/tvTaskDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lines="4"/>
+        android:maxLines="4"/>
 
     <TextView
         android:id="@+id/taskCategory"
