--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -11,6 +11,7 @@
         android:id="@+id/rvTasks"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingTop="@dimen/taskItemSpacing"
         app:layout_constraintBottom_toBottomOf="@+id/bEditCategories"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -20,7 +21,11 @@
         android:id="@+id/bEditCategories"
         android:layout_width="0dp"
         android:layout_height="@dimen/bHeight"
+        android:background="@color/bBackgroundColor"
         android:text="@string/EditCategories"
+        android:textAllCaps="true"
+        android:textColor="@color/bTextColor"
+        android:textSize="@dimen/bTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/bNewTask"/>
@@ -29,7 +34,11 @@
         android:id="@+id/bNewTask"
         android:layout_width="0dp"
         android:layout_height="@dimen/bHeight"
+        android:background="@color/bBackgroundColor"
         android:text="@string/NewTask"
+        android:textAllCaps="true"
+        android:textColor="@color/bTextColor"
+        android:textSize="@dimen/bTextSize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/bEditCategories"
         app:layout_constraintRight_toRightOf="parent"/>
