--- a/app/src/main/res/layout/activity_edit_categories.xml
+++ b/app/src/main/res/layout/activity_edit_categories.xml
@@ -13,7 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="6dp"
-        android:background="#DDD"
+        android:background="@color/yellow200"
         android:hint="@string/newCategory"
         android:paddingLeft="8dp"
         android:textSize="18sp"
@@ -26,7 +26,7 @@
         android:id="@+id/bAddNewCategory"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:background="#BBB"
+        android:background="@color/yellow300"
         android:text="+"
         android:textColor="#666"
         android:textSize="28sp"
