--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/yellow500</color>
+    <color name="colorPrimaryDark">@color/yellow900</color>
+    <color name="colorAccent">#039be5</color>
 
-    <color name="Urgent">#ffcccc</color>
-    <color name="High">#ffe6cc</color>
-    <color name="Normal">#ffffcc</color>
-    <color name="Low">#ccffcc</color>
+    <color name="yellow50">#fffde7</color>
+    <color name="yellow100">#fff9c4</color>
+    <color name="yellow200">#fff59d</color>
+    <color name="yellow300">#fff176</color>
+    <color name="yellow400">#ffee58</color>
+    <color name="yellow500">#ffeb3b</color>
+    <color name="yellow600">#fdd835</color>
+    <color name="yellow700">#fbc02d</color>
+    <color name="yellow800">#f9a825</color>
+    <color name="yellow900">#f57f17</color>
+
+
+    <color name="Urgent">#ff9d7f</color>
+    <color name="High">#ffdf80</color>
+    <color name="Normal">#fff48e</color>
+    <color name="Low">#ccff90</color>
+    <color name="bBackgroundColor">@color/yellow300</color>
+    <color name="bTextColor">#333</color>
+    <color name="inputColor">#333</color>
 </resources>
