--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -21,8 +21,7 @@
     <TextView
         android:id="@+id/tvTaskDescription"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLines="4"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/taskCategory"
